--- a/Localizable.xcstrings
+++ b/Localizable.xcstrings
@@ -168,6 +168,9 @@
     "inclineBench" : {
       "comment" : "machine equipment"
     },
+    "Kategorie" : {
+
+    },
     "kettlebells" : {
       "comment" : "machine equipment"
     },
@@ -201,8 +204,14 @@
     "Lp." : {
 
     },
+    "mainMuscule" : {
+
+    },
     "miniLoopBands" : {
       "comment" : "machine equipment"
+    },
+    "muscleGroups" : {
+
     },
     "must Login" : {
 
@@ -210,7 +219,19 @@
     "Name" : {
 
     },
+    "Name Exercise" : {
+
+    },
     "Name trening" : {
+
+    },
+    "Nazwa" : {
+
+    },
+    "Next" : {
+
+    },
+    "Obj: %@ kg" : {
 
     },
     "Opis" : {
@@ -218,6 +239,9 @@
     },
     "paralletteBar" : {
       "comment" : "machine equipment"
+    },
+    "Picker" : {
+
     },
     "platforms" : {
       "comment" : "machine equipment"
@@ -240,6 +264,9 @@
     "rep" : {
 
     },
+    "REPS" : {
+
+    },
     "reverseHyperBench" : {
       "comment" : "machine equipment"
     },
@@ -259,6 +286,12 @@
       "comment" : "machine equipment"
     },
     "Sa" : {
+
+    },
+    "Save" : {
+
+    },
+    "secondMuscule" : {
 
     },
     "Send" : {
@@ -286,9 +319,6 @@
       "comment" : "machine equipment"
     },
     "Super seria" : {
-
-    },
-    "Szczegóły" : {
 
     },
     "tBar" : {
